--- a/templates/index.html
+++ b/templates/index.html
@@ -471,6 +471,23 @@
             <h1 class="grey-text" style="margin-top:25px;">Sponsors</h1>
             <div class="col-1 center-col" style="margin-top: 25px;">
                 <div class="logo-container big-tile">
+                    <h1 style="font-size:20pt; font-variant: small-caps">MHacks 8 Presented By</h1>
+                    <div class="logo-row premium">
+                        <div><a target="_blank" href="http://corporate.ford.com/careers.html"><img
+                                src="{{ static('assets/Ford_logo.png') }}" alt="Sponsor Logo - Ford"></a></div>
+                    </div>
+                </div>
+                <div class="logo-container big-tile">
+                    <div class="logo-row large">
+                        <div><a target="_blank" href="http://careers.gm.com/"><img
+                                src="{{ static('assets/GM_logo.png') }}" alt="Sponsor Logo - GM"></a></div>
+                        <div><a target="_blank" href="https://careers.microsoft.com/students"><img
+                                src="{{ static('assets/Microsoft_logo.png') }}" alt="Sponsor Logo - Microsoft"></a></div>
+                    </div>
+                    <div class="logo-row large">
+                        <div><a target="_blank" href="http://www.ge.com/"><img
+                                src="{{ static('assets/GE_logo.png') }}" alt="Sponsor Logo - GE"></a></div>
+                    </div>
                     <div class="logo-row medium">
                         <div><a target="_blank" href="http://a16z.com"><img
                                 src="{{ static('assets/a16z_logo.png') }}" alt="Sponsor Logo - a16z"></a></div>
@@ -478,6 +495,30 @@
                                 src="{{ static('assets/Magna_logo.png') }}" alt="Sponsor Logo - Magna Electronics"></a></div>
                         <div><a target="_blank" href="https://corp.mhplan.com/"><img
                                 src="{{ static('assets/Meridian_logo.png') }}" alt="Sponsor Logo - Meridian Health Plan"></a></div>
+                    </div>
+                    <div class="logo-row medium">
+                        <div><a target="_blank" href="http://linode.com"><img
+                                src="{{ static('assets/Linode_logo.png') }}" alt="Sponsor Logo - Linode"></a></div>
+                        <div><a target="_blank" href="http://www.homewardhc.com/"><img
+                                src="{{ static('assets/Wellopp_logo.png') }}" alt="Sponsor Logo - Wellopp"></a></div>
+                        <div><a target="_blank" href="http://www.battelle.org/cyber-careers"><img
+                                src="{{ static('assets/Battelle_logo.png') }}" alt="Sponsor Logo - Battelle"></a></div>
+                    </div>
+                    <div class="logo-row medium">
+                        <div><a target="_blank" href="https://corporate.target.com/careers/career-areas/technology"><img
+                                src="{{ static('assets/Target_logo.jpg') }}" alt="Sponsor Logo - Target"></a></div>
+                        <div><a target="_blank" href="https://www.facebook.com/careers/"><img
+                                src="{{ static('assets/Facebook_logo.png') }}" alt="Sponsor Logo - Facebook"></a></div>
+                        <div><a target="_blank" href="http://www.esri.com/"><img
+                                src="{{ static('assets/Esri_logo.png') }}" alt="Sponsor Logo - Esri"></a></div>
+                    </div>
+                    <div class="logo-row medium">
+                        <div><a target="_blank" href="https://sendgrid.com/"><img
+                                src="{{ static('assets/Sendgrid_logo.png') }}" alt="Sponsor Logo - Sendgrid"></a></div>
+                        <div><a target="_blank" href="https://undergroundshirts.com/"><img
+                                src="{{ static('assets/UGP_logo.png') }}" alt="Sponsor Logo - UGP"></a></div>
+                        <div><a target="_blank" href="https://www.concur.com/"><img
+                                src="{{ static('assets/Concur_logo.png') }}" alt="Sponsor Logo - Concur"></a></div>
                     </div>
                     <div class="logo-row small">
                         <div><a target="_blank" href="http://www.1517fund.com/"><img
@@ -490,6 +531,12 @@
                                 src="{{ static('assets/Expedia_logo.png') }}" alt="Sponsor Logo - Expedia"></a></div>
                         <div><a target="_blank" href="https://www.venturestorm.com/"><img
                                 src="{{ static('assets/VentureStorm_logo.png') }}" alt="Sponsor Logo - VentureStorm"></a></div>
+                    </div>
+                    <div class="logo-row small">
+                        <div><a target="_blank" href="https://www.retailmenot.com/"><img
+                                src="{{ static('assets/RetailMeNot_logo.png') }}" alt="Sponsor Logo - RetailMeNot"></a></div>
+                        <div><a target="_blank" href="https://developer.nrel.gov/"><img
+                                src="{{ static('assets/NREL_logo.png') }}" alt="Sponsor Logo - NREL"></a></div>
                     </div>
                 </div>
             </div>
