Changed wellopp link url

--- a/templates/index.html
+++ b/templates/index.html
@@ -499,7 +499,7 @@
                     <div class="logo-row medium">
                         <div><a target="_blank" href="http://linode.com"><img
                                 src="{{ static('assets/Linode_logo.png') }}" alt="Sponsor Logo - Linode"></a></div>
-                        <div><a target="_blank" href="http://www.homewardhc.com/"><img
+                        <div><a target="_blank" href="http://www.wellopp.com/"><img
                                 src="{{ static('assets/Wellopp_logo.png') }}" alt="Sponsor Logo - Wellopp"></a></div>
                         <div><a target="_blank" href="http://www.battelle.org/cyber-careers"><img
                                 src="{{ static('assets/Battelle_logo.png') }}" alt="Sponsor Logo - Battelle"></a></div>
