Changed sendgrid link url

--- a/templates/index.html
+++ b/templates/index.html
@@ -513,7 +513,7 @@
                                 src="{{ static('assets/Esri_logo.png') }}" alt="Sponsor Logo - Esri"></a></div>
                     </div>
                     <div class="logo-row medium">
-                        <div><a target="_blank" href="https://sendgrid.com/"><img
+                        <div><a target="_blank" href="https://sendgrid.com/accelerate"><img
                                 src="{{ static('assets/Sendgrid_logo.png') }}" alt="Sponsor Logo - Sendgrid"></a></div>
                         <div><a target="_blank" href="https://undergroundshirts.com/"><img
                                 src="{{ static('assets/UGP_logo.png') }}" alt="Sponsor Logo - UGP"></a></div>
