--- a/static/stylesheets/live.css
+++ b/static/stylesheets/live.css
@@ -1,28 +1,88 @@
+body{
+    background-color: #e6f3f7;
+}
+
+.header {
+    opacity: 1;
+    position: static !important;
+}
+
+.live-navbar {
+    width: 100%;
+    height: 60px;
+    background-color: #00A9C2;
+}
+
+.live-container{
+    width:100vw;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.content-header {
+    width: 100%;
+    height: 60px;
+
+    background-color: white;
+    box-shadow: 0 3px 5px 1px rgba(192,192,192,1);
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.content-header * {
+    margin: 0;
+}
+
+.content-box {
+    background-color: white;
+    box-shadow: 0 2px 10px 1px rgba(160,160,160,1);
+}
+
+@media only screen and (max-width: 700px){
+    #logo{
+        height: auto;
+        width: 90px;
+    }
+}
+
+@media only screen and (max-width: 550px){
+    .header {
+        height: 90px;
+    }
+    #logo{
+        height: auto;
+        width: 60px;
+    }
+}
+
+/* ========== Schedule ========== */
+
 .schedule {
-    width: 80%;
-    height: 100vh;
+    width: calc(100vw - 475px);
+    height: calc(100vh - 280px);
+
+    margin-right: 50px;
+    margin-top: 50px;
 
     overflow-y:auto;
 }
 
 .schedule-header {
-    width: 100%;
-    height: 60px;
-    background-color: lightblue;
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
 }
 
-.container {
+.schedule-container {
     min-height: calc(100% - 70px);
+    width: 100%;
 
     padding: 5px 35px 5px 25px;
-
-    background-color: lightcoral;
 }
 
 .time-markers{
@@ -34,10 +94,11 @@
 }
 
 .time-stamps {
-    margin-top: 18px;
+    margin-top: 11px;
     float: left;
     text-align: right;
     flex-shrink: 0;
+    min-width: 75px;
 }
 
 .time-stamps p {
@@ -45,6 +106,7 @@
     padding: 0;
     height: 40px;
     font-variant: small-caps;
+    color: black;
 }
 
 .time-stamps p:nth-child(odd){
@@ -79,19 +141,89 @@
 }
 
 .event {
-    position: relative;
+    position: absolute;
     float: left;
     border: 5px solid green;
     border-radius: 5px;
     background-color: lightgreen;
+    opacity: 0.95;
     overflow: hidden;
     height: 0;
-    transition: height 0.5s;
+    transition: all 0.5s linear;
     z-index: 5;
 }
 
 .event:hover {
     height: auto;
-    transition: height 0.5s;
+    transition: all 0.5s linear;
     z-index: 10;
+}
+
+.shiftLeft {
+    left: 100px !important;
+    transition: all 0.4s linear;
+    transition-delay: 0.1s;
+}
+
+/* ========== Announcements ========== */
+
+.announcements {
+    width: 300px;
+    height: calc(100vh - 280px);
+
+    margin-left: 50px;
+    margin-top: 50px;
+
+    overflow-y:auto;
+}
+
+/* ========== Countdowns ========== */
+
+.hideCountdown{
+    display: none;
+}
+
+#countdown-container {
+    padding-right: 50px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.countdown {
+    text-align: right;
+}
+
+.countdown *{
+    margin: 0;
+    color: white !important;
+}
+
+.countdown h3 {
+    font-weight: 400;
+}
+
+.countdown span {
+    font-weight: bold;
+    font-size: 23pt;
+    margin-bottom: 5px;
+}
+
+@media only screen and (max-width: 700px) {
+    .countdown span {
+        font-size: 18pt;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .countdown span {
+        font-size: 12pt;
+    }
+
+    .countdown h3 {
+        font-size: 8pt;
+    }
 }
