--- a/templates/live.html
+++ b/templates/live.html
@@ -7,5 +7,27 @@
 {% endblock %}
 
 {% block content %}
-    {% include 'schedule.html' %}
+    <div class="header turquoise">
+        <div id="eventInfo">
+            <h2>October 7-9</h2>
+            <p>Detroit Masonic Temple</p>
+        </div>
+        <div id="logo">
+            <a href="{{ url_for('mhacks-live') }}">
+                <img id="logo" src="{{ static('assets/logo.png') }}" alt="MHacks 8 Logo - M">
+            </a>
+        </div>
+        <div id="countdown-container">
+            {% include 'countdown.html' %}
+        </div>
+    </div>
+
+    <div class="live-navbar">
+
+    </div>
+
+    <div class="live-container">
+        <div>{% include 'announcements.html' %}</div>
+        <div>{% include 'schedule.html' %}</div>
+    </div>
 {% endblock %}
