--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,8 +1,8 @@
-<div class="schedule">
-    <div class="schedule-header">
+<div class="content-box schedule">
+    <div class="content-header">
         <h1>Schedule</h1>
     </div>
-    <div class="container">
+    <div class="schedule-container">
         <div class="time-markers">
             <div class="time-stamps">
 
