--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,6 +1,11 @@
 <div class="content-box schedule">
-    <div class="content-header">
+    <div class="content-header schedule-header">
         <h1>Schedule</h1>
+        <div class="category-group">
+            <h2 class="category-0">General</h2>
+            <h2 class="category-1">Activities</h2>
+            <h2 class="category-2">Events</h2>
+        </div>
     </div>
     <div class="schedule-container">
         <div class="time-markers">
