--- a/templates/index.html
+++ b/templates/index.html
@@ -487,6 +487,9 @@
                     <div class="logo-row large">
                         <div><a target="_blank" href="http://www.ge.com/"><img
                                 src="{{ static('assets/GE_logo.png') }}" alt="Sponsor Logo - GE"></a></div>
+                        <div><a target="_blank" href="http://www.blackrock.com/"><img
+                                src="{{ static('assets/blackrock_logo.png') }}" alt="Sponsor Logo - Blackrock"></a></div>
+
                     </div>
                     <div class="logo-row medium">
                         <div><a target="_blank" href="http://a16z.com"><img
@@ -520,6 +523,10 @@
                         <div><a target="_blank" href="https://www.concur.com/"><img
                                 src="{{ static('assets/Concur_logo.png') }}" alt="Sponsor Logo - Concur"></a></div>
                     </div>
+                    <div class="logo-row medium">
+                        <div><a target="_blank" href="https://www.quickenloans.com"><img
+                                src="{{ static('assets/quicken_logo.jpg') }}" alt="Sponsor Logo - Quicken Loans"></a></div>
+                    </div>
                     <div class="logo-row small">
                         <div><a target="_blank" href="http://www.1517fund.com/"><img
                                 src="{{ static('assets/1517_logo.png') }}" alt="Sponsor Logo - 1517"></a></div>
@@ -537,9 +544,40 @@
                                 src="{{ static('assets/RetailMeNot_logo.png') }}" alt="Sponsor Logo - RetailMeNot"></a></div>
                         <div><a target="_blank" href="https://developer.nrel.gov/"><img
                                 src="{{ static('assets/NREL_logo.png') }}" alt="Sponsor Logo - NREL"></a></div>
+                        <div><a target="_blank" href="http://wolfram.com/"><img
+                                src="{{ static('assets/wolfram-corporate-logo.png') }}" alt="Sponsor Logo - Wolfram"></a></div>
+                        <div><a target="_blank" href="http://pillartechnology.com/"><img style="width:80%" 
+                                src="{{ static('assets/pillar_logo.png') }}" alt="Sponsor Logo - Pillar"></a></div>    
+                        <div><a target="_blank" href="https://www.salesforceiq.com/"><img 
+                                src="{{ static('assets/salesforceiq_icon.jpg') }}" alt="Sponsor Logo - SalesForceIQ"></a></div>     
+                    </div>
+                    <div class="logo-row small">
+                        <div><a target="_blank" href="http://www.goldmansachs.com/"><img
+                                src="{{ static('assets/goldman_logo.jpg') }}" alt="Sponsor Logo - Goldman Sachs"></a></div>
+                        <div><a target="_blank" href="http://www.intrepidcs.com/"><img
+                                src="{{ static('assets/intrepid_logo.png') }}" alt="Sponsor Logo - IntrepidCS"></a></div>
+                        <div><a target="_blank" href="http://ventureforamerica.org/"><img
+                                src="{{ static('assets/vfa_logo.jpg') }}" alt="Sponsor Logo - VFA"></a></div>
+                        <div><a target="_blank" href="https://www.capitalone.com/"><img
+                                src="{{ static('assets/capitalone_logo.png') }}" alt="Sponsor Logo - Capital One"></a></div>
+                        <div><a target="_blank" href="https://www.kcg.com/"><img
+                                src="{{ static('assets/kcg_logo.png') }}" alt="Sponsor Logo - KCG"></a></div>
+                    </div>
+                    <div class="logo-row small">
+                        <div><a target="_blank" href="http://www.google.com/"><img
+                                src="{{ static('assets/google_logo.png') }}" alt="Sponsor Logo - Google"></a></div>
+                        <div><a target="_blank" href="http://www.namecheap.com/"><img
+                                src="{{ static('assets/Namecheap.png') }}" alt="Sponsor Logo - Namecheap"></a></div>
+                        <div><a target="_blank" href="http://www.qualtrics.com/"><img
+                                src="{{ static('assets/qualtrics_logo.png') }}" alt="Sponsor Logo - Qualtrics"></a></div>
+                        <div><a target="_blank" href="http://www.qualtrics.com/"><img
+                                src="{{ static('assets/mongodb_logo.jpg') }}" alt="Sponsor Logo - MongoDB"></a></div>
                     </div>
                 </div>
             </div>
+
+                  
+
 
             <div class="flex-row">
 
