--- a/templates/index.html
+++ b/templates/index.html
@@ -555,7 +555,7 @@
                         <div><a target="_blank" href="http://www.goldmansachs.com/"><img
                                 src="{{ static('assets/goldman_logo.jpg') }}" alt="Sponsor Logo - Goldman Sachs"></a></div>
                         <div><a target="_blank" href="http://www.intrepidcs.com/"><img
-                                src="{{ static('assets/intrepid_logo.png') }}" alt="Sponsor Logo - IntrepidCS"></a></div>
+                                src="{{ static('assets/Intrepid_logo.png') }}" alt="Sponsor Logo - IntrepidCS"></a></div>
                         <div><a target="_blank" href="http://ventureforamerica.org/"><img
                                 src="{{ static('assets/vfa_logo.jpg') }}" alt="Sponsor Logo - VFA"></a></div>
                         <div><a target="_blank" href="https://www.capitalone.com/"><img
