--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,6 +39,8 @@
                     <p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/1197509966946089/">Facebook event page</a> and join the community!</p>
                     <p>Hit the button below to register and make sure you check out our <span class="fake-link" id="bus-routes-link">bus routes</span>! 🎉</p>
                     <p><a href="https://www.eventbrite.com/e/mhacks-8-busses-registration-27238162076">Click here to register for a bus! (Eventbrite)</a></p>
+                    <p>Busses leave at 4:00pm and 5:30pm from Pierpont Commons on Friday, Oct 7th.</p>
+                    <p>Please note: UMich students do not have to register for busses.</p>
 
                     {% if registration_application and registration_application.submitted %}
                         {% if registration_application.acceptance == 'yes' %}
