Live page mostly done, ready for testing

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,7 +1,7 @@
 <div class="content-box schedule">
-    <div class="content-header schedule-header">
+    <div class="content-header col-2-flex">
         <h1>Schedule</h1>
-        <div class="category-group">
+        <div class="right-header-group category-group">
             <h2 class="category-0">General</h2>
             <h2 class="category-1">Activities</h2>
             <h2 class="category-2">Events</h2>
