--- a/static/stylesheets/live.css
+++ b/static/stylesheets/live.css
@@ -5,6 +5,7 @@ body{
 .live-header {
     width: 100%;
     height: 180px;
+    margin-bottom: 50px;
     background-color: #07889C;
     box-shadow: 0 4px 5px 1px rgba(200, 200, 200, 0.80);
 }
@@ -33,6 +34,12 @@ body{
     margin: 0 15px;
     position: relative;
     display: inline-block;
+    color: white;
+}
+
+.live-navlink:hover {
+    color: white;
+    text-decoration: none;
 }
 
 .live-navlink::after {
@@ -44,7 +51,7 @@ body{
 	background: #fff;
 	content: '';
 	opacity: 0;
-	transition: height 0.3s, opacity 0.3s, transform 0.3s;
+	transition: height 0.2s, opacity 0.2s, transform 0.2s;
 	transform: translateY(5px);
 }
 
@@ -55,12 +62,17 @@ body{
 }
 
 .live-container{
-    width:100vw;
+    width: calc(100vw - 100px);
+    margin: 50px;
 
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+.col-2-flex {
+    justify-content: space-between !important;
 }
 
 .content-header {
@@ -88,6 +100,17 @@ body{
     margin-left: 20px;
 }
 
+.right-header-group {
+    height: 100%;
+    margin-right: 20px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    align-items: center;
+}
+
 .content-box {
     background-color: white;
     box-shadow: 0 2px 10px 1px rgba(160,160,160,1);
@@ -95,9 +118,15 @@ body{
 
 @media only screen and (max-width: 850px){
     .live-container{
+        margin: 0 50px;
+
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
+    }
+
+    .content-box:first-child {
+        margin-bottom: 50px;
     }
 }
 
@@ -127,25 +156,7 @@ body{
     width: calc(100vw - 475px);
     height: calc(100vh - 280px);
 
-    margin-right: 50px;
-    margin-top: 50px;
-
     overflow: hidden;
-}
-
-.schedule-header {
-    justify-content: space-between;
-}
-
-.category-group {
-    height: 100%;
-    margin-right: 20px;
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-end;
-    align-items: center;
 }
 
 .category-group *{
@@ -269,7 +280,9 @@ body{
 }
 
 .event h3 {
-    margin: 0 0 8px 0;
+    margin: 0 0 4px 0;
+    padding-bottom: 4px;
+    border-bottom: 2px solid #cccccccc;
 }
 
 .event p {
@@ -278,12 +291,15 @@ body{
 
 .event.category-0 * {
     color: darkviolet;
+    border-color: darkviolet;
 }
 .event.category-1 * {
     color: darkorange;
+    border-color: darkorange;
 }
 .event.category-2 * {
     color: darkgreen;
+    border-color: darkgreen;
 }
 
 @media only screen and (max-width: 850px){
@@ -291,7 +307,6 @@ body{
         width: calc(100vw - 100px);
         height: 600px;
         margin-right: 0;
-        margin-bottom: 100px;
     }
 }
 
@@ -300,9 +315,6 @@ body{
 .announcements {
     width: 300px;
     height: calc(100vh - 280px);
-
-    margin-left: 50px;
-    margin-top: 50px;
 
     overflow-y: hidden;
 }
@@ -388,5 +400,143 @@ body{
 
     .countdown h3 {
         font-size: 8pt;
+    }
+}
+
+/* ========== Maps ========== */
+
+.maps-container {
+    /*max-width: 550px;*/
+    width: calc(100vw - 100px);
+
+    padding: 25px;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.maps-link {
+    color: #0093B1;
+    border: 2px #0093B1 solid;
+    padding-top: 2px;
+    width: 30px;
+    height: 30px;
+    margin: 0 5px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.maps-link:hover {
+    background-color: #cccccc88;
+}
+
+.maps-link.selected {
+    background-color: #0093B1;
+    color: white;
+}
+
+.maps-floor {
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.floor-diagram {
+    height: 300px;
+    width: calc(100vw - 450px);
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.floor-diagram img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.floor-details {
+    margin-left: 10px;
+    width: 290px;
+    height: 100%;
+    color: black;
+}
+
+.floor-details h3 {
+    color: #0093B1;
+    margin: 0;
+    padding-left: 10px;
+}
+
+@media only screen and (max-width: 850px){
+    .maps-container {
+        max-width: none;
+        width: calc(100vw - 100px);
+    }
+    .floor-diagram {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    .floor-details {
+        min-width: 240px;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .floor-details {
+        font-size: 8pt;
+        min-width: 120px;
+    }
+}
+
+/* ========== Mentorship ========== */
+
+.mentorship-container {
+    width: calc(100vw - 610px);
+    padding: 20px;
+    text-align: center;
+}
+
+.mentorship-container h2, .mentorship-container h3 {
+    color: #0093B1;
+}
+
+.mentorship-container p {
+    color: black;
+    width: 100%;
+}
+
+@media only screen and (max-width: 850px){
+    .mentorship-container {
+        width: calc(100vw - 100px);
+    }
+}
+
+/* ========== Live Stream ========== */
+
+.stream-container {
+    width: 440px;
+    height: 265px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 850px){
+    .stream-container {
+        width: calc(100vw - 100px);
     }
 }
