--- a/templates/live.html
+++ b/templates/live.html
@@ -23,32 +23,50 @@
             </div>
         </div>
         <div class="live-navbar">
-            <div class="live-navlink">
+            <a class="live-navlink" data-section="Announcements">
                 Announcements
-            </div>
-            <div class="live-navlink">
+            </a>
+            <a class="live-navlink" data-section="Schedule">
                 Schedule
-            </div>
-            <div class="live-navlink">
+            </a>
+            <a class="live-navlink" data-section="Maps">
                 Map
-            </div>
-            <div class="live-navlink">
+            </a>
+            <a class="live-navlink" data-section="LiveStream">
                 Live Stream
-            </div>
-            <div class="live-navlink">
+            </a>
+            <a class="live-navlink" target="_blank" href="https://mhacks8.devpost.com">
                 Devpost
-            </div>
-            <div class="live-navlink">
+            </a>
+            <a class="live-navlink" data-section="Mentorship">
                 Mentorship
-            </div>
-            <div class="live-navlink">
+            </a>
+            <a class="live-navlink" target="_blank" href="#">
                 Hardware
-            </div>
+            </a>
         </div>
     </div>
 
-    <div class="live-container">
-        <div>{% include 'announcements.html' %}</div>
-        <div>{% include 'schedule.html' %}</div>
+    <div class="live-container col-2-flex">
+        <div class="live-section" data-section="Announcements">{% include 'announcements.html' %}</div>
+        <div class="live-section" data-section="Schedule">{% include 'schedule.html' %}</div>
     </div>
+    <div class="live-container">
+        <div class="live-section" data-section="Maps">{% include 'maps.html' %}</div>
+    </div>
+    <div class="live-container col-2-flex">
+        <div class="live-section" data-section="LiveStream">{% include 'stream.html' %}</div>
+        <div class="live-section" data-section="Mentorship">{% include 'mentorship.html' %}</div>
+    </div>
+{% endblock %}
+
+{% block scripts %}
+    <script>
+        $(".live-navlink").click(function(event){
+            var sectionName = $(event.target).data("section");
+            if(sectionName != undefined){
+                $("html, body").stop().animate({scrollTop:$(".live-section[data-section="+sectionName+"]").offset().top}, 'medium');
+            }
+        });
+    </script>
 {% endblock %}
