--- a/templates/live.html
+++ b/templates/live.html
@@ -32,17 +32,14 @@
             <a class="live-navlink" data-section="Maps">
                 Map
             </a>
-            <a class="live-navlink" data-section="LiveStream">
-                Live Stream
-            </a>
-            <a class="live-navlink" target="_blank" href="https://mhacks8.devpost.com">
-                Devpost
-            </a>
             <a class="live-navlink" data-section="Mentorship">
                 Mentorship
             </a>
-            <a class="live-navlink" target="_blank" href="#">
+            <a class="live-navlink" data-section="Hardware">
                 Hardware
+            </a>
+            <a class="live-navlink" target="_blank" href="https://mhacks8.devpost.com">
+                Devpost
             </a>
         </div>
     </div>
@@ -55,8 +52,8 @@
         <div class="live-section" data-section="Maps">{% include 'maps.html' %}</div>
     </div>
     <div class="live-container col-2-flex">
-        <div class="live-section" data-section="LiveStream">{% include 'stream.html' %}</div>
         <div class="live-section" data-section="Mentorship">{% include 'mentorship.html' %}</div>
+        <div class="live-section" data-section="Hardware">{% include 'hardware.html' %}</div>
     </div>
 {% endblock %}
 
