--- a/templates/maps.html
+++ b/templates/maps.html
@@ -70,7 +70,7 @@
         </div>
         <div class="maps-floor" data-level="1">
             <div class="floor-diagram">
-                <img src="{{ static('assets/1st_floor.png') }}" alt="1st Floor Diagram">
+                <img src="{{ static('assets/FirstFloor.png') }}" alt="1st Floor Diagram">
             </div>
             <div class="floor-details">
                 <h3>Other</h3>
@@ -83,7 +83,7 @@
         </div>
         <div class="maps-floor" data-level="B">
             <div class="floor-diagram">
-                <img src="{{ static('assets/basement_floor.png') }}" alt="Basement Floor Diagram">
+                <img src="{{ static('assets/basement.png') }}" alt="Basement Floor Diagram">
             </div>
             <div class="floor-details">
                 <h3>Cortices</h3>
