--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -6,11 +6,11 @@
         <h2>
            Some resources to help you get started!
        </h2>
-       <h3 style="margin-top:0;font-size: 1.25em">
-           Check back often, because we'll be adding more links throughout hacking!
+       <h3>
+           Check back often, because we'll be adding more links throughout the weekend.
        </h3>
-       <p style="margin-bottom:0;text-align:center;">
-           Need a mentor? Head to <a href="!" target="_blank"><< insert mentorship here >></a>!
+       <p>
+           Need a mentor? Head to <a href="#" target="_blank"><< insert mentorship here >></a>!
        </p>
         <p>
             Need help finding a team? Check out <a href="https://www.venturestorm.com/users/sign_up?type=developer" target="_blank">Venturestorm's Team App</a>!
