--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -2,9 +2,14 @@
     <div class="content-header col-2-flex">
         <h1>Schedule</h1>
         <div class="right-header-group category-group">
-            <h2 class="category-0">General</h2>
-            <h2 class="category-1">Activities</h2>
-            <h2 class="category-2">Events</h2>
+            <div class="schedule-legend">
+                <h2>Legend:</h2>
+                <div class="schedule-categories">
+                    <h2 class="category-0">General</h2>
+                    <h2 class="category-1">Activities</h2>
+                    <h2 class="category-2">Events</h2>
+                </div>
+            </div>
         </div>
     </div>
     <div class="schedule-container">
