--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,18 +1,18 @@
 <div class="content-box schedule">
-    <div class="content-header col-2-flex">
+    <div class="content-header">
         <h1>Schedule</h1>
-        <div class="right-header-group category-group">
-            <div class="schedule-legend">
-                <h2>Legend:</h2>
-                <div class="schedule-categories">
-                    <h2 class="category-0">General</h2>
-                    <h2 class="category-1">Activities</h2>
-                    <h2 class="category-2">Events</h2>
-                </div>
-            </div>
-        </div>
     </div>
     <div class="schedule-container">
+        <div class="schedule-legend">
+            <h2>Legend:</h2>
+            <div class="schedule-categories">
+                <h2 class="category-0">General</h2>
+                <h2 class="category-1">Logistics</h2>
+                <h2 class="category-2">Food</h2>
+                <h2 class="category-3">Learn</h2>
+                <h2 class="category-4">Social</h2>
+            </div>
+        </div>
         <div class="time-markers">
             <div class="time-stamps">
 
