--- a/templates/announcements.html
+++ b/templates/announcements.html
@@ -3,7 +3,15 @@
         <h1>Announcements</h1>
     </div>
     <div class="announcements-container">
-
+        <div class="announcements-legend">
+            <h2>Categories:</h2>
+            <div class="announcements-categories">
+                <h2 class="category-0">Emergency</h2>
+                <h2 class="category-1">Logistics</h2>
+                <h2 class="category-2">Food</h2>
+                <h2 class="category-3">Events</h2>
+            </div>
+        </div>
     </div>
 </div>
 <script src="{{ static('javascript/announcements.js') }}" type="text/javascript"></script>
