--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -4,7 +4,7 @@
     </div>
     <div class="schedule-container">
         <div class="schedule-legend">
-            <h2>Legend:</h2>
+            <h2>Categories:</h2>
             <div class="schedule-categories">
                 <h2 class="category-0">General</h2>
                 <h2 class="category-1">Logistics</h2>
