Announcement category indicator sizing fix

--- a/static/stylesheets/live.css
+++ b/static/stylesheets/live.css
@@ -432,6 +432,7 @@ body{
 .category-container {
     width: 3px;
     margin-right: 7px;
+    flex-shrink: 0;
 
     display: flex;
     flex-direction: column;
