--- a/templates/index.html
+++ b/templates/index.html
@@ -605,4 +605,5 @@
 {% block scripts %}
     <script src="{{ static('javascript/packery.pkgd.min.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascript/index.js') }}" type="application/javascript"></script>
+    <script src="{{ static('javascript/faq.js') }}" type="application/javascript"></script>
 {% endblock %}
