--- a/templates/live.html
+++ b/templates/live.html
@@ -38,6 +38,9 @@
             <a class="live-navlink" data-section="Hardware">
                 Hardware
             </a>
+            <a class="live-navlink" data-section="FAQ">
+                FAQs
+            </a>
             <a class="live-navlink" target="_blank" href="https://mhacks8.devpost.com">
                 Devpost
             </a>
@@ -54,6 +57,9 @@
     <div class="live-container col-2-flex">
         <div class="live-section" data-section="Mentorship">{% include 'mentorship.html' %}</div>
         <div class="live-section" data-section="Hardware">{% include 'hardware.html' %}</div>
+    </div>
+    <div class="live-container">
+        <div class="live-section" data-section="FAQ">{% include 'live_faqs.html' %}</div>
     </div>
 {% endblock %}
 
