updated shower faq

--- a/templates/index.html
+++ b/templates/index.html
@@ -394,7 +394,7 @@
                                 Can I shower?
                             </div>
                             <div class="answer" data-qid="24">
-                                There won't be showers available at the venue.
+                                Yes, there will be opportunities to shower at MHacks 8!.
                             </div>
                         </div>
                     </div>
