--- a/static/stylesheets/dashboard.css
+++ b/static/stylesheets/dashboard.css
@@ -3,7 +3,7 @@
 }
 
 #bus-routes-img {
-    max-height: 20%;
+    max-height: 60%;
     max-width: 100%;
     border: 1px dashed #337ab7;
 }
@@ -45,4 +45,14 @@
 
 .fake-link:hover {
     text-decoration: underline;
+}
+
+.qr-code {
+    display: block;
+    margin: 0 auto 0 auto;
+    width: 200px;
+}
+.apple-wallet {
+    margin-bottom: 20px;
+    width: 150px;
 }
